<resources>
    <string name="app_name">ENGY-141e-4a0b-8523-d42d749e30de</string>
    <string name="title_activity_nav_bar">Conference</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">SAATVIK JAIN</string>
    <string name="user_institute">IIIT DELHI</string>
    <string name="user_location">New Delhi, India</string>
    <string name="user_bio">Lorem ipsum dolor sit amet consectetur adipiscing elit suspendisse rutrum vel ex non</string>
    <string name="user_research_interest">  \u2022 Blockchain \n\u2022 Cryptocurrency \n\u2022 Cryptography \n\u2022 Group Theory</string>
    <string name="user_papers_presented">  \u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum</string>
    <string name="user_email">loremipsum@gmail.com</string>
    <string name="description">The ACM CHI Conference on Human Factors in Computing Systems is the premier international conference of Human-Computer Interaction. For first-time attendees, CHI is a place where researchers and practitioners gather from across the world to discuss the latest in interactive technology. We are a multicultural community from highly diverse backgrounds who together investigate new and creative ways for people to interact.

At this year’s CHI – pronounced ‘kai’ – the theme will be engage. Our focus will be to engage with people, to engage with technology, to engage with newcomers, to engage with world-class research, to engage with your community of designers, researchers, and practitioners… to engage with CHI!
</string>
    <string name="title_activity_first_time">ActivityFirstTime</string>
    <string name="joining_code_verify">VERIFY</string>
    <string name="joining_code">Joining Code</string>
    <string name="title_activity_user_profile">ActivityUserProfile</string>
</resources>
