<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/background_light"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center|center_horizontal"
                    android:background="@drawable/usericon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/username"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/user_institute"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/user_location"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bioTitle"
                        android:text="Bio"
                        android:layout_marginTop="4dp"
                        android:textSize="22sp"
                        android:textStyle="italic"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bioTextView"
                        android:text="@string/user_bio"
                        android:fontFamily="sans-serif-light"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/interestTitle"
                        android:text="Research Interests"
                        android:textSize="22sp"
                        android:textStyle="italic"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resInterestTextView"
                        android:text="@string/user_research_interest"
                        android:fontFamily="sans-serif-light"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/papersTitle"
                        android:text="Papers presented"
                        android:textSize="22sp"
                        android:textStyle="italic"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/papersTextView"
                        android:text="@string/user_papers_presented"
                        android:fontFamily="sans-serif-light"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/contactTitle"
                        android:text="Contact"
                        android:textSize="22sp"
                        android:textStyle="italic"
                        android:textColor="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/email_icon"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@android:color/black"
                            android:text="@string/user_email"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_gravity="center|center_horizontal"
                        android:textColor="@android:color/white"
                        android:background="@drawable/buttonback"
                        android:text="Connect"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>